Move AbstractTest to 'main' so that it can be used by other projects in the test phase.

--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,7 @@ allprojects {
         compile "org.apache.logging.log4j:log4j-api:${log4jVersion}"
         compile "org.apache.logging.log4j:log4j-core:${log4jVersion}"
 
-        testCompile "io.github.bonigarcia:webdrivermanager:${webdriverManagerVersion}"
+        compile "io.github.bonigarcia:webdrivermanager:${webdriverManagerVersion}"
 
         //  Junit Jupiter API and TestEngine implementation
         testCompile "org.junit.jupiter:junit-jupiter-api:${junitJupiterVersion}"
